clean-up javascript & login stubs

--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -6,4 +6,4 @@
 
 <script src="http://static.ak.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php" type="text/javascript"></script>
 
-<%= javascript_include_tag :all, :cache => 'all', :recursive => true %>
+<%= javascript_include_tag  %w[ jquery application welcome ], :cache => 'all' %>
