finish integration iframe authentication

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
       <div class="dashboard_tab_wrapper">
         <div class="dashboard_title">
-          App Name<span class="tm">TM</span>
+          <%= Facebooker.config[:application_name] %><span class="tm">TM</span>
         </div>
         <%= render :partial => "layouts/tabs" %>
       </div>
