--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -1,6 +1,6 @@
 <script>
-  var api_key           = '<%= Facebooker.facebooker_config['api_key'] %>';
-  var xd_receiver       = '<%= xd_receiver %>';
+  var api_key           = '<%= Facebooker.config[:api_key] %>';
+  var xd_receiver       = '<%= Facebooker.config[:xd_receiver] %>';
   var session_id        = '<%= @rails_session_id %>';
 </script>
 
