--- a/app/views/layouts/_tabs.html.erb
+++ b/app/views/layouts/_tabs.html.erb
@@ -12,10 +12,9 @@
             :selected   => @play_tab,
             :first      => true  ) +
 
-      tab(  "Store",
-            :controller => :store,
-            :action     => :add,
-            :selected   => @store_tab ) +
+      tab(  "Shop",
+            :controller => :shop,
+            :selected   => @shop_tab ) +
 
       tab(  "Welcome",
             :controller => :welcome,
